--- a/index.html
+++ b/index.html
@@ -364,7 +364,12 @@
               possible.
             </p>
           </div>
-          <form action="contactform.php" class="contact__form" method="post">
+          <form
+            class="contact__form"
+            method="post"
+            data-netlify-recaptcha="true"
+            data-netlify="true"
+          >
             <div class="contact__control">
               <label for="name" class="visually-hidden">Name</label>
               <input
@@ -416,6 +421,9 @@
                 width="24"
                 height="24"
               />
+            </div>
+            <div class="captcha">
+              <div data-netlify-recaptcha="true"></div>
             </div>
             <div class="contact__control align-right">
               <button type="submit" name="submit">Send Message</button>
