Edit conact form in order to use netlify forms

--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
           </div>
           <form
             class="contact__form"
+            name="contact"
             method="post"
             data-netlify-recaptcha="true"
             data-netlify="true"
