Add name=from-name to the concatc form in order to use netlify forms

--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
             data-netlify-recaptcha="true"
             data-netlify="true"
           >
+            <input type="hidden" name="form-name" value="contact" />
             <div class="contact__control">
               <label for="name" class="visually-hidden">Name</label>
               <input
