--- a/index.html
+++ b/index.html
@@ -201,6 +201,42 @@
               <picture class="projects__picture">
                 <source
                   media="(min-width: 62.5em)"
+                  srcset="/assets/images/thumbnail-project-1-lagre.webp"
+                />
+                <img
+                  class="projects__image"
+                  src="/assets/images/thumbnail-project-1-small.webp"
+                  alt="screenshot of design portfolio website"
+                  width-="343"
+                  height="253"
+                />
+              </picture>
+              <h3 class="projects__name">Manage landing page</h3>
+              <p class="projects__tags">
+                <span>HTML</span>
+                <span>CSS</span>
+                <span>JavaScript</span>
+              </p>
+              <div class="projects__links">
+                <a
+                  href="https://neon-palmier-b9431a.netlify.app/"
+                  target="_blank"
+                  class="underline"
+                  >View Project</a
+                >
+                <a
+                  href="https://github.com/pb-wd027/tailwind-manage-landing"
+                  target="_blank"
+                  class="underline"
+                  >View Code</a
+                >
+              </div>
+            </div>
+
+            <!-- <div class="projects__item">
+              <picture class="projects__picture">
+                <source
+                  media="(min-width: 62.5em)"
                   srcset="/assets/images/thumbnail-project-1-large.webp"
                 />
                 <img
@@ -220,7 +256,7 @@
                 <a href="" class="underline">View Project</a>
                 <a href="" class="underline">View Code</a>
               </div>
-            </div>
+            </div> -->
 
             <div class="projects__item">
               <picture class="projects__picture">
