--- a/index.html
+++ b/index.html
@@ -48,21 +48,6 @@
               />
             </svg>
           </a>
-          <!-- <a href="" class="header__social">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="26"
-              height="23"
-              aria-labelledby="socialFrontendMentor"
-              role="img"
-            >
-              <title id="socialFrontendMentor">Frontend Mentor</title>
-              <path
-                fill="#FFF"
-                d="M13.084.23a.751.751 0 0 0-.736.75v14.267a.75.75 0 1 0 1.5 0V.98a.75.75 0 0 0-.763-.75ZM24.44 4.504a.752.752 0 0 0-.284.064l-6.44 2.875a.752.752 0 0 0 0 1.37l6.44 2.884a.75.75 0 0 0 .612-1.369L19.861 8.13l4.907-2.191a.753.753 0 0 0 .38-.99.752.752 0 0 0-.708-.444ZM1.371 9.663a.752.752 0 0 0-.74.938C2.41 17.447 8.603 22.23 15.685 22.23a.75.75 0 1 0 0-1.501A14.053 14.053 0 0 1 2.083 10.225a.75.75 0 0 0-.712-.561v-.001Z"
-              />
-            </svg>
-          </a> -->
           <a
             href="https://www.linkedin.com/in/pbauerdev/"
             target="_blank"
@@ -83,21 +68,6 @@
               />
             </svg>
           </a>
-          <!-- <a href="" class="header__social">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="20"
-              aria-labelledby="socialTwitter"
-              role="img"
-            >
-              <title id="socialTwitter">Twitter</title>
-              <path
-                fill="#FFF"
-                d="M23.492 2.705a9.563 9.563 0 0 1-2.742.751 4.788 4.788 0 0 0 2.1-2.643 9.536 9.536 0 0 1-3.033 1.159 4.778 4.778 0 0 0-8.14 4.357 13.564 13.564 0 0 1-9.844-4.99 4.774 4.774 0 0 0-.646 2.4 4.778 4.778 0 0 0 2.124 3.977 4.765 4.765 0 0 1-2.163-.598v.061a4.778 4.778 0 0 0 3.832 4.684 4.812 4.812 0 0 1-2.158.082 4.78 4.78 0 0 0 4.462 3.316 9.584 9.584 0 0 1-5.932 2.045c-.38 0-.762-.022-1.14-.067a13.508 13.508 0 0 0 7.32 2.146c8.787 0 13.59-7.277 13.59-13.589 0-.205-.004-.412-.013-.617a9.71 9.71 0 0 0 2.381-2.471l.002-.003Z"
-              />
-            </svg>
-          </a> -->
         </nav>
       </div>
     </header>
@@ -168,7 +138,7 @@
             <p class="skills__description"></p>
           </div>
           <div class="skills__item">
-            <h3 class="skills__title">Accessibility</h3>
+            <h3 class="skills__title">Sass</h3>
             <p class="skills__description"></p>
           </div>
           <div class="skills__item">
@@ -176,7 +146,7 @@
             <p class="skills__description"></p>
           </div>
           <div class="skills__item">
-            <h3 class="skills__title">Sass</h3>
+            <h3 class="skills__title">Accessibility</h3>
             <p class="skills__description"></p>
           </div>
         </div>
@@ -272,6 +242,41 @@
                   height="253"
                 />
               </picture>
+              <h3 class="projects__name">Memory Game</h3>
+              <p class="projects__tags">
+                <span>HTML</span>
+                <span>CSS</span>
+              </p>
+              <div class="projects__links">
+                <a
+                  href="https://memory-game-delta-three.vercel.app/"
+                  target="_blank"
+                  class="underline"
+                  >View Project</a
+                >
+                <a
+                  href="https://github.com/pb-wd027/memory-game"
+                  target="_blank"
+                  class="underline"
+                  >View Code</a
+                >
+              </div>
+            </div>
+
+            <!-- <div class="projects__item">
+              <picture class="projects__picture">
+                <source
+                  media="(min-width: 62.5em)"
+                  srcset="/assets/images/thumbnail-project-2-large.webp"
+                />
+                <img
+                  class="projects__image"
+                  src="/assets/images/thumbnail-project-2-small.webp"
+                  alt="screenshot of learning platform website with different courses"
+                  width-="343"
+                  height="253"
+                />
+              </picture>
               <h3 class="projects__name">E-Learning Landing Page</h3>
               <p class="projects__tags">
                 <span>HTML</span>
@@ -281,7 +286,7 @@
                 <a href="" class="underline">View Project</a>
                 <a href="" class="underline">View Code</a>
               </div>
-            </div>
+            </div> -->
 
             <div class="projects__item">
               <picture class="projects__picture">
