Add technologi description to the second project

--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
               <p class="projects__tags">
                 <span>HTML</span>
                 <span>CSS</span>
+                <span>React</span>
               </p>
               <div class="projects__links">
                 <a
