Add 3rd project

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <img
                   class="projects__image"
                   src="/assets/images/thumbnail-project-1-small.webp"
-                  alt="screenshot of design portfolio website"
+                  alt="screenshot of landing portfolio website"
                   width-="343"
                   height="253"
                 />
@@ -237,7 +237,7 @@
                 <img
                   class="projects__image"
                   src="/assets/images/thumbnail-project-2-small.webp"
-                  alt="screenshot of learning platform website with different courses"
+                  alt="screenshot of memory game app"
                   width-="343"
                   height="253"
                 />
@@ -289,7 +289,7 @@
               </div>
             </div> -->
 
-            <div class="projects__item">
+            <!-- <div class="projects__item">
               <picture class="projects__picture">
                 <source
                   media="(min-width: 62.5em)"
@@ -313,35 +313,36 @@
                 <a href="" class="underline">View Project</a>
                 <a href="" class="underline">View Code</a>
               </div>
-            </div>
+            </div> -->
 
             <div class="projects__item">
               <picture class="projects__picture">
                 <source
                   media="(min-width: 62.5em)"
-                  srcset="/assets/images/thumbnail-project-4-large.webp"
+                  srcset="/assets/images/thumbnail-project-3-large.webp"
                 />
                 <img
                   class="projects__image"
-                  src="/assets/images/thumbnail-project-4-small.webp"
+                  src="/assets/images/thumbnail-project-3-small.webp"
                   alt="screenshot of video player app with grid of thumbnails of movies and TV shows"
                   width-="343"
                   height="253"
                 />
               </picture>
-              <h3 class="projects__name">Entertainment Web App</h3>
+              <h3 class="projects__name">Simple Movie App/h3>
               <p class="projects__tags">
                 <span>HTML</span>
                 <span>CSS</span>
                 <span>JavaScript</span>
+                <span>API</span>
               </p>
               <div class="projects__links">
-                <a href="" class="underline">View Project</a>
-                <a href="" class="underline">View Code</a>
+                <a href="https://memory-game-delta-three.vercel.app/" target="_blank" class="underline">View Project</a>
+                <a href="https://github.com/pb-wd027/simple-movie-db-app" target="_blank" class="underline">View Code</a>
               </div>
             </div>
 
-            <div class="projects__item">
+            <!-- <div class="projects__item">
               <picture class="projects__picture">
                 <source
                   media="(min-width: 62.5em)"
@@ -365,9 +366,9 @@
                 <a href="" class="underline">View Project</a>
                 <a href="" class="underline">View Code</a>
               </div>
-            </div>
+            </div> -->
 
-            <div class="projects__item">
+            <!-- <div class="projects__item">
               <picture class="projects__picture">
                 <source
                   media="(min-width: 62.5em)"
@@ -391,7 +392,7 @@
                 <a href="" class="underline">View Project</a>
                 <a href="" class="underline">View Code</a>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
