Correct html tags

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                   height="253"
                 />
               </picture>
-              <h3 class="projects__name">Simple Movie App/h3>
+              <h3 class="projects__name">Simple Movie App</h3>
               <p class="projects__tags">
                 <span>HTML</span>
                 <span>CSS</span>
@@ -337,8 +337,18 @@
                 <span>API</span>
               </p>
               <div class="projects__links">
-                <a href="https://memory-game-delta-three.vercel.app/" target="_blank" class="underline">View Project</a>
-                <a href="https://github.com/pb-wd027/simple-movie-db-app" target="_blank" class="underline">View Code</a>
+                <a
+                  href="https://memory-game-delta-three.vercel.app/"
+                  target="_blank"
+                  class="underline"
+                  >View Project</a
+                >
+                <a
+                  href="https://github.com/pb-wd027/simple-movie-db-app"
+                  target="_blank"
+                  class="underline"
+                  >View Code</a
+                >
               </div>
             </div>
 
