--- a/index.html
+++ b/index.html
@@ -352,31 +352,37 @@
               </div>
             </div>
 
-            <!-- <div class="projects__item">
+            <div class="projects__item">
               <picture class="projects__picture">
                 <source
                   media="(min-width: 62.5em)"
-                  srcset="/assets/images/thumbnail-project-5-large.webp"
+                  srcset="/assets/images/thumbnail-project-4-large.webp"
                 />
                 <img
                   class="projects__image"
-                  src="/assets/images/thumbnail-project-5-small.webp"
-                  alt="screenshot of 4-player memory game with circular tiles that have symbols"
+                  src="/assets/images/thumbnail-project-4-small.webp"
+                  alt="screenshot of medical appointment service app"
                   width-="343"
                   height="253"
                 />
               </picture>
-              <h3 class="projects__name">Memory Game</h3>
+              <h3 class="projects__name">Medical Appointment Service</h3>
               <p class="projects__tags">
                 <span>HTML</span>
                 <span>CSS</span>
-                <span>JavaScript</span>
+                <span>React</span>
+                <span>NodeJS</span>
               </p>
               <div class="projects__links">
                 <a href="" class="underline">View Project</a>
-                <a href="" class="underline">View Code</a>
+                <a
+                  href="https://github.com/pb-wd027/appointment-service-app"
+                  target="_blank"
+                  class="underline"
+                  >View Code</a
+                >
               </div>
-            </div> -->
+            </div>
 
             <!-- <div class="projects__item">
               <picture class="projects__picture">
