Add 5th project

--- a/index.html
+++ b/index.html
@@ -306,6 +306,42 @@
                 >
               </div>
             </div>
+
+            <div class="projects__item">
+              <picture class="projects__picture">
+                <source
+                  media="(min-width: 62.5em)"
+                  srcset="/assets/images/thumbnail-project-5-large.webp"
+                />
+                <img
+                  class="projects__image"
+                  src="/assets/images/thumbnail-project-5-small.webp"
+                  alt="screenshot of accordion table"
+                  width-="343"
+                  height="253"
+                />
+              </picture>
+              <h3 class="projects__name">Accordion</h3>
+              <p class="projects__tags">
+                <span>HTML</span>
+                <span>CSS</span>
+                <span>JavaScript</span>
+              </p>
+              <div class="projects__links">
+                <a
+                  href="https://main--vermillion-arithmetic-b638ec.netlify.app/"
+                  target="_blank"
+                  class="underline"
+                  >View Project</a
+                >
+                <a
+                  href="https://github.com/pb-wd027/accordion"
+                  target="_blank"
+                  class="underline"
+                  >View Code</a
+                >
+              </div>
+            </div>
           </div>
         </div>
       </section>
