--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Paul Bauer | Single-page developer portfolio</title>
+    <title>Paul Bauer | Web Developer</title>
   </head>
   <body>
     <header class="header">
