Edit description section

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                 meet you! I'm <span>Paul Bauer</span>.
               </h1>
               <p class="hero__description">
-                Based in Germany, I'm a front-end developer passionate about
-                building accessible web apps that users love.
+                Based in Germany, I'm a web developer passionate about building
+                accessible web apps that users love.
               </p>
               <a href="#contact" class="hero__contact underline">Contact me</a>
             </div>
